--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@
 body {
     color: black;
     background: white;
-    font-family: cursive;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.1em; 
 }
 
 a {
@@ -55,7 +56,7 @@ a:hover {
     margin: 0 0 2em;  
     padding: 0 1em .5em 1em; 
     box-sizing: border-box;
-    font-family: fantasy;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     height: 250px;
 
 }
@@ -254,7 +255,6 @@ img.bus1,
 
     .row {
         width: 80%; 
-        height: 400px;
         margin: 0 auto; 
         border-radius: .5em;
         padding-top: 0;
