--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
     color: black;
     background: white;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.1em; 
+    /* font-size: 1.1em;  */
 }
 
 a {
