--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,11 @@ h1 {
 =======================*/
 
 a:hover {
-    color: rgb(21, 196, 21);
+    color: rgb(32, 29, 167);
 }
 
 .kayak:hover {
-    opacity: 0.5;
+    opacity: 0.8;
 }
 
 .kayak:hover::before {
@@ -43,6 +43,8 @@ a:hover {
     position: relative;
     text-align: center;
     display: block;
+    padding-top: 20px;
+    font-size: 2em;
 }
 
 
